--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
     "@mui/material": "latest",
+    "@notionhq/client": "^2.2.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
